[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airllm"
version = "2.11.0"
description = "AirLLM allows single 4GB GPU card to run 70B large language models without quantization, distillation or pruning. 8GB vram to run 405B Llama3.1."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Gavin Li", email = "gavinli@animaai.cloud" },
]
keywords = [
    "llm",
    "inference",
    "memory-efficient",
    "large-language-models",
    "transformers",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tqdm>=4.65",
    "torch>=2.0",
    "transformers>=4.36",  # >=4.36 fixes the 'rope_scaling must be a dictionary with two fields' error
    "accelerate>=0.20.3",
    "safetensors>=0.4",
    "optimum>=1.13",
    "huggingface-hub>=0.20",
    "scipy>=1.10",
    # bitsandbytes is optional (only needed for compression='4bit'/'8bit')
]

[project.optional-dependencies]
compression = ["bitsandbytes>=0.41"]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
lint = [
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/lyogavin/airllm"
Issues = "https://github.com/lyogavin/airllm/issues"
Source = "https://github.com/lyogavin/airllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["airllm*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (long docstrings are fine)
    "B008",  # function call in default argument (used by transformers)
]
